<resources>
    <string name="edit_message">Wpisz cos</string>
    <string name="button_send">"Zatwierdź "</string>
    <string name="app_name">GraTest</string>
    <string name="cele_gra">CEL GRY: zbuduj najpotezniejsze krolestwo budujac wszystkie fortyfikacje, budujac po 50 budynkow mieszkalnych i budynkow produkcyjnych, i zbierajac armie po 500 z kazdego typu zolnierzy. Przegrasz, jeśli twoja ilość mieszkańców spadnie do 0.</string>
    <string name="podsumowanie_krolestwa">Podsumowanie twojego królestwa:</string>
    <string name="wpisz_imie">Wpisz swoje imię.</string>
    <string name="menu_budowy_przycisk">Menu budowy</string>
    <string name="menu_treningu_przycisk">Menu treningu</string>
    <string name="targowisko_przycisk">Rynek</string>
    <string name="atak_przycisk">Atak</string>
    <string name="zakoncz_ture_przycisk">Zakończ turę</string>
    <string name="powrot">Powrót</string>
    <string name="menu_budowy_militarne">Militarne</string>
    <string name="menu_budowy_zasobowe">Gospodarcze</string>
    <string name="menu_budowy_mieszkalne">Mieszkalne</string>
    <string name="mieszkalne_palac">Pałac</string>
    <string name="mieszkalne_dwor">Dwór</string>
    <string name="mieszkalne_folwark">Folwark</string>
    <string name="mieszkalne_chata">Chata</string>
    <string name="gospodarcze_tartak">Tartak</string>
    <string name="gospodarcze_kamieniolom">Kopalnia</string>
    <string name="gospodarcze_huta">Huta</string>
    <string name="militarne_zamek">Zamek</string>
    <string name="militarne_cytadela">Cytadela</string>
    <string name="militarne_fort">Fort</string>
    <string name="militarne_mur">Mur</string>
    <string name="militarne_baraki">Koszary</string>
    <string name="zbuduj">Zatwierdź</string>
    <string name="ileZbudowac">Wpisz ilość</string>
    <string name="twoje_surowce">Twoje zasoby:</string>
    <string name="trening_piechota">+ piechota</string>
    <string name="trening_lucznicy">+ łucznicy</string>
    <string name="trening_kawaleria">+ kawaleria</string>
    <string name="surowce_zloto">Złoto</string>
    <string name="surowce_jedzenie">Jedzenie</string>
    <string name="surowce_drewno">Drewno</string>
    <string name="surowce_kamien">Kamień</string>
    <string name="surowce_zelazo">Żelazo</string>
    <string name="rynek_sprzedasz">Sprzedasz:</string>
    <string name="rynek_kupisz">Dostaniesz:</string>
    <string name="wydarzenie_ok">OK</string>
    <string name="menu_ataku_latwy">Łatwy</string>
    <string name="menu_ataku_sredni">Średni</string>
    <string name="menu_ataku_trudny">Trudny</string>
    <string name="cena">Cena:</string>
    <string name="nazwa_gra">Pierwsza Gra</string>
</resources>
