<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".rynekActivity">

    <ImageView
        android:id="@+id/imageView36"
        android:layout_width="0dp"
        android:layout_height="136dp"
        android:layout_marginTop="8dp"
        android:elevation="0px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ramka_na_surowce" />

    <Button
        android:id="@+id/button10"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginStart="46dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/przycisk_menu"
        android:onClick="powrotDoMenuGlownego"
        android:text="@string/powrot"
        android:textColor="@android:color/holo_orange_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewZloto"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:elevation="1px"
        android:src="@drawable/ikona_zloto_80x80"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewDrewno"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:elevation="1px"
        android:src="@drawable/ikona_drewno_80x80"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewZloto" />

    <TextView
        android:id="@+id/textViewJedzenie"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="44dp"
        android:elevation="1px"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="20dp"
        android:elevation="1px"
        android:src="@drawable/ikona_zelazo_80x80"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <TextView
        android:id="@+id/textViewDrewno"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="24dp"
        android:elevation="1px"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toEndOf="@+id/imageViewDrewno"
        app:layout_constraintTop_toBottomOf="@+id/textViewZloto" />

    <TextView
        android:id="@+id/textViewZelazo"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:elevation="1px"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toEndOf="@+id/imageView17"
        app:layout_constraintTop_toBottomOf="@+id/textViewJedzenie" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="40dp"
        android:elevation="1px"
        android:src="@drawable/ikona_mieszkancy_80x80"
        app:layout_constraintStart_toEndOf="@+id/imageViewZloto"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="40dp"
        android:elevation="1px"
        android:src="@drawable/ikona_jedzenie_80x80"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewKamien"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:elevation="1px"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/textViewMieszkancy" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="20dp"
        android:elevation="1px"
        android:src="@drawable/ikona_kamien_80x80"
        app:layout_constraintStart_toEndOf="@+id/imageViewDrewno"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <TextView
        android:id="@+id/textViewMieszkancy"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="44dp"
        android:elevation="1px"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewZloto"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="44dp"
        android:elevation="1px"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toEndOf="@+id/imageViewZloto"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/twoje_surowce"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView36"
        app:layout_constraintStart_toStartOf="@+id/imageView36"
        app:layout_constraintTop_toTopOf="@+id/imageView36" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/slider_pasek"
        android:thumb="@drawable/slider_przycisk_diament"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView36" />

    <Button
        android:id="@+id/przyciskSprzedajZloto"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/przycisk_menu"
        android:onClick="wybierzSprzedazZloto"
        android:text="@string/surowce_zloto"
        android:textColor="@android:color/holo_orange_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <Button
        android:id="@+id/przyciskSprzedajJedzenie"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/przycisk_menu"
        android:onClick="wybierzSprzedazJedzenie"
        android:text="@string/surowce_jedzenie"
        android:textColor="@android:color/holo_orange_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/przyciskSprzedajZloto" />

    <Button
        android:id="@+id/przyciskSprzedajDrewno"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/przycisk_menu"
        android:onClick="wybierzSprzedazDrewno"
        android:text="@string/surowce_drewno"
        android:textColor="@android:color/holo_orange_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/przyciskSprzedajJedzenie" />

    <Button
        android:id="@+id/przyciskSprzedajKamien"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/przycisk_menu"
        android:onClick="wybierzSprzedazKamien"
        android:text="@string/surowce_kamien"
        android:textColor="@android:color/holo_orange_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/przyciskSprzedajDrewno" />

    <Button
        android:id="@+id/przyciskSprzedajZelazo"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/przycisk_menu"
        android:onClick="wybierzSprzedazZelazo"
        android:text="@string/surowce_zelazo"
        android:textColor="@android:color/holo_orange_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/przyciskSprzedajKamien" />

    <Button
        android:id="@+id/button32"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/przycisk_menu"
        android:onClick="zatwierdz"
        android:text="@string/zbuduj"
        android:textColor="@android:color/holo_orange_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/przyciskKupZloto"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/przycisk_menu"
        android:onClick="wybierzKupZloto"
        android:text="@string/surowce_zloto"
        android:textColor="@android:color/holo_orange_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <Button
        android:id="@+id/przyciskKupJedzenie"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/przycisk_menu"
        android:onClick="wybierzKupJedzenie"
        android:text="@string/surowce_jedzenie"
        android:textColor="@android:color/holo_orange_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/przyciskKupZloto" />

    <Button
        android:id="@+id/przyciskKupDrewno"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/przycisk_menu"
        android:onClick="wybierzKupDrewno"
        android:text="@string/surowce_drewno"
        android:textColor="@android:color/holo_orange_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/przyciskKupJedzenie" />

    <Button
        android:id="@+id/przyciskKupKamien"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/przycisk_menu"
        android:onClick="wybierzKupKamien"
        android:text="@string/surowce_kamien"
        android:textColor="@android:color/holo_orange_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/przyciskKupDrewno" />

    <Button
        android:id="@+id/przyciskKupZelazo"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/przycisk_menu"
        android:onClick="wybierzKupZelazo"
        android:text="@string/surowce_zelazo"
        android:textColor="@android:color/holo_orange_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/przyciskKupKamien" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:text="@string/rynek_sprzedasz"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/przyciskSprzedajZloto"
        app:layout_constraintEnd_toStartOf="@+id/sprzedaszIlosc"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/sprzedaszIlosc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:text="0"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/przyciskSprzedajZloto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:text="@string/rynek_kupisz"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/przyciskKupZloto"
        app:layout_constraintEnd_toStartOf="@+id/kupiszIlosc"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/kupiszIlosc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:text="0"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/przyciskKupZloto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />


</androidx.constraintlayout.widget.ConstraintLayout>