<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".menuBudowy.menuBudowyActivity">

    <ImageView
        android:id="@+id/imageView38"
        android:layout_width="0dp"
        android:layout_height="136dp"
        android:layout_marginTop="8dp"
        android:elevation="0px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ramka_na_surowce" />

    <ImageView
        android:id="@+id/obrazek_zloto3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:elevation="1px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ikona_zloto_80x80" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="20dp"
        android:elevation="1px"
        app:layout_constraintStart_toEndOf="@+id/imageView14"
        app:layout_constraintTop_toBottomOf="@+id/imageView12"
        app:srcCompat="@drawable/ikona_kamien_80x80" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="40dp"
        android:elevation="1px"
        app:layout_constraintStart_toStartOf="@+id/textViewZloto"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ikona_mieszkancy_80x80" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/imageView15"
        app:layout_constraintTop_toBottomOf="@+id/imageView13"
        app:srcCompat="@drawable/ikona_zelazo_80x80"
        android:elevation="1px" />

    <TextView
        android:id="@+id/textViewKamien"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="24dp"
        android:elevation="1px"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView15"
        app:layout_constraintTop_toBottomOf="@+id/textViewMieszkancy" />

    <TextView
        android:id="@+id/textViewZloto"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="44dp"
        android:elevation="1px"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/obrazek_zloto3"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="40dp"
        android:elevation="1px"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ikona_jedzenie_80x80" />

    <TextView
        android:id="@+id/textViewJedzenie"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="44dp"
        android:elevation="1px"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewMieszkancy"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="44dp"
        android:elevation="1px"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDrewno"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="24dp"
        android:elevation="1px"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView14"
        app:layout_constraintTop_toBottomOf="@+id/textViewZloto" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:elevation="1px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/obrazek_zloto3"
        app:srcCompat="@drawable/ikona_drewno_80x80" />

    <TextView
        android:id="@+id/textViewZelazo"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="24dp"
        android:elevation="1px"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView16"
        app:layout_constraintTop_toBottomOf="@+id/textViewJedzenie" />

    <Button
        android:id="@+id/button4"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/przycisk_menu"
        android:onClick="powrotDoMenuGlownego"
        android:text="@string/powrot"
        android:textColor="@android:color/holo_orange_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/przycisk_menu"
        android:onClick="menuBudowyMilitarne"
        android:text="@string/menu_budowy_militarne"
        android:textColor="@android:color/holo_orange_light"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/przycisk_menu"
        android:onClick="menuBudowyGospodarcze"
        android:text="@string/menu_budowy_zasobowe"
        android:textColor="@android:color/holo_orange_light"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/przycisk_menu"
        android:onClick="menuBudowyMieszkalne"
        android:text="@string/menu_budowy_mieszkalne"
        android:textColor="@android:color/holo_orange_light"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:elevation="1px"
        android:text="@string/twoje_surowce"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView38"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/imageView38"
        app:layout_constraintTop_toTopOf="@+id/imageView38" />
</androidx.constraintlayout.widget.ConstraintLayout>